--- a/content/aboutme/aboutme.html
+++ b/content/aboutme/aboutme.html
@@ -14,6 +14,4 @@ title: My Background and Interests
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
-<pre class="r"><code>r &lt;- 2+4
-r</code></pre>
-<pre><code>## [1] 6</code></pre>
+<p><img src="C:/Users/julie/Documents/1. LBS Computer/MFA/4. Class/2. Term One/2. Data Analytics/Website/my_website/img/aboutme.jpg" width="100%" /></p>
