--- a/content/aboutme/aboutme.html
+++ b/content/aboutme/aboutme.html
@@ -14,4 +14,5 @@ title: My Background and Interests
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
+<pre class="r"><code>knitr::include_graphics(here::here(&quot;static&quot;, &quot;aboutme.jpg&quot;), error = FALSE)</code></pre>
 <p><img src="C:/Users/julie/Documents/1.%20LBS%20Computer/MFA/4.%20Class/2.%20Term%20One/2.%20Data%20Analytics/Website/my_website/static/aboutme.jpg" width="100%" /></p>
