--- a/content/whatiread/whatiread.html
+++ b/content/whatiread/whatiread.html
@@ -14,6 +14,7 @@ title: How CEO Stock Options affect Firm Risk-taking
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
+<p><img src="aboutme.jpg" /></p>
 <p>Test!!!!!!
 How CEO Stock Options affect Firm Risk-taking
 How CEO Stock Options affect Firm Risk-taking
@@ -27,4 +28,3 @@ How CEO Stock Options affect Firm Risk-takingHow CEO Stock Options affect Firm R
 How CEO Stock Options affect Firm Risk-taking
 How CEO Stock Options affect Firm Risk-taking
 How CEO Stock Options affect Firm Risk-takingHow CEO Stock Options affect Firm Risk-takingHow CEO Stock Options affect Firm Risk-takingHow CEO Stock Options affect Firm Risk-takingHow CEO Stock Options affect Firm Risk-takingHow CEO Stock Options affect Firm Risk-takingHow CEO Stock Options affect Firm Risk-takingHow CEO Stock Options affect Firm Risk-takingHow CEO Stock Options affect Firm Risk-takingHow CEO Stock Options affect Firm Risk-taking</p>
-<p><img src="C:/Users/julie/Documents/1.%20LBS%20Computer/MFA/4.%20Class/2.%20Term%20One/2.%20Data%20Analytics/Website/my_website/static/obstacle.jpg" width="100%" /></p>
