pic not working

--- a/content/whatiread/whatiread.html
+++ b/content/whatiread/whatiread.html
@@ -14,7 +14,7 @@ title: How CEO Stock Options affect Firm Risk-taking
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
-<p><img src="aboutme.jpg" /></p>
+<p><img src="/img/pic02.jpg" width="50%" style="display: block; margin: auto auto auto 0;" /></p>
 <p>Test!!!!!!
 How CEO Stock Options affect Firm Risk-taking
 How CEO Stock Options affect Firm Risk-taking
