--- a/content/whatiread/whatiread.html
+++ b/content/whatiread/whatiread.html
@@ -14,5 +14,16 @@ categories:
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
-<p><img src="/img/pic02.jpg" width="20%" style="display: block; margin: auto auto auto 0;" /></p>
-<p><img src="/img/pic03.jpg" width="20%" style="display: block; margin: auto 0 auto auto;" /></p>
+<p><img src="/img/pic02.jpg" width="20%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pic03.jpg" width="20%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pic04.jpg" width="20%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pic05.jpg" width="20%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pic06.jpg" width="20%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pic07.jpg" width="20%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pic08.jpg" width="20%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pic09.jpg" width="20%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pic10.jpg" width="40%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pic11.jpg" width="40%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pic12.jpg" width="20%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pic13.jpg" width="20%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pic14.jpg" width="20%" style="display: block; margin: auto;" /></p>
