push thesis file

--- a/content/projects/CEOOP.html
+++ b/content/projects/CEOOP.html
@@ -11,4 +11,7 @@ categories:
 - ''
 ---
 
-WORK In Progre
+<script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
+
+
+<p>WORK In Progre</p>
