--- a/content/projects/CEOOP.html
+++ b/content/projects/CEOOP.html
@@ -14,4 +14,4 @@ categories:
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
-<p>WORK In Progre</p>
+<p><img src="/img/pag1.jpg" width="70%" style="display: block; margin: auto;" /></p>
