--- a/content/projects/CEOOP.html
+++ b/content/projects/CEOOP.html
@@ -15,3 +15,72 @@ categories:
 
 
 <p><img src="/img/pag1.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag2.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag3.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag4.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag5.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag6.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag7.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag8.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag9.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag10.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag11.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag12.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag13.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag14.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag15.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag16.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag17.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag18.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag19.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag20.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag21.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag22.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag23.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag24.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag25.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag26.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag27.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag28.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag29.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag30.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag31.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag32.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag33.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag34.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag35.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag36.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag37.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag38.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag39.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag40.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag41.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag42.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag43.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag44.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag45.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag46.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag47.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag48.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag49.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag50.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag51.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag52.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag53.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag54.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag55.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag56.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag57.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag58.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag59.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag60.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag61.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag62.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag63.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag64.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag65.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag66.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag67.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag68.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag69.jpg" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="/img/pag70.jpg" width="70%" style="display: block; margin: auto;" /></p>
