--- a/content/projects/bikess.html
+++ b/content/projects/bikess.html
@@ -44,8 +44,8 @@ bike</code></pre>
 ## 10 2010-08-08        7864  2010 Aug      31
 ## # ... with 3,676 more rows</code></pre>
 <p>We can easily create a facet grid that plots bikes hired by month and year.</p>
-<pre class="r"><code>knitr::include_graphics(here::here(&quot;/img/tfl_distributions_monthly.png&quot;), error = FALSE)</code></pre>
-<p><img src="C:/Users/julie/Documents/1. LBS Computer/MFA/4. Class/2. Term One/2. Data Analytics/Website/my_website//img/tfl_distributions_monthly.png" width="100%" style="display: block; margin: auto;" /></p>
+<pre class="r"><code>knitr::include_graphics(here::here(&quot;/img/tfl.png&quot;), error = FALSE)</code></pre>
+<p><img src="C:/Users/julie/Documents/1. LBS Computer/MFA/4. Class/2. Term One/2. Data Analytics/Website/my_website//img/tfl.png" width="100%" style="display: block; margin: auto;" /></p>
 <p>We can already see the high level impact COVID-19 has had on Tfl Bike travel.</p>
 <pre class="r"><code>#We first start by calculating the historic monthly average between 2015 and 2019
 historic_average &lt;- bike %&gt;%
